welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:7: error: not found: value setBrosseCouleur
	setBrosseCouleur(c);avance();marque();avance();gauche();avance();marque();droite();avance();droite();avance();marque();gauche();avance();gauche();
        ^